# cardiofit_2026

./: -  .gitignore  19_11_ Architecture Design_ CDSS .txt  CLAUDE.md  CLINICAL_EXTRACTION_AUDITOR.md  ClinicalPipelineE2EHarness.java  DoctorDashboard360_Endpoints_Triggers.docx  DoctorDashboard360_ScreenGuide.docx  Ethical_Architecture_Implementation_Guidelines_v1.md  G14_CM_LogOdds_Composition_Spec.md  Gap 17.txt  Gap 20.txt  INTAKE_GUIDE_EXTRACTED.txt  KB5_VERIFICATION_SUMMARY.md  KDIGO-2022-Diabetes-CKD-Docling-Output.md  Layer1_Australian_Aged_Care_Implementation_Guidelines.md  Layer2_Implementation_Guidelines.md  Layer3_v2_Rule_Encoding_Implementation_Guidelines (1).md  Lifestyle_Intelligence_Stack_Flow_and_Implementation_Plan.docx  MODULE4_COMPREHENSIVE_COMPLIANCE_VERIFICATION.md  Module5_ML_Inference_Engine_Implementation_Guidelines.md  Module6_Clinical_Action_Delivery_Implementation_Guidelines.md  Module_11_Implementation_Plan.md  Module_12_Intervention_Window_Monitor_Proposal.docx  Module_13_Clinical_State_Synchroniser_Implementation_Plan.docx  Module_7_BP_Variability_Engine_Implementation_Plan.md  Pharmacist_Self_Visibility_Implementation_Guidelines_v1.md  README (11).md  README.md  README_Architecture_GCP.md  README_Flink_GCP.md  RUNTIME_LAYER_IMPLEMENTATION_WORKFLOW.md  Runtime Layer Platform_ 8 Components.txt  V4 2. CGM Analytics Layer.txt  V4 3. Therapeutic Inertia Detection.txt  V4 4. CKM Stage 4 Subcategorization.txt  V4 5. MHRI Domain-Decomposed Trajectory.txt  V4 6. Masked Hypertension & White-Coat Detection.txt  V4 7. "Phenotype Clustering has no Temporal Stabilitycheck".txt  V4 8. IOR Confounder Scoring.txt  (+47 more)
backend/services/clinical-data-hub-rust/: Cargo.toml  README.md  STARTUP.md  build.rs.bak  mock-clinical-data-hub.py
backend/services/clinical-data-hub-rust/proto/: clinical_data_hub.proto
backend/services/clinical-data-hub-rust/src/: clinical_data_hub.rs  main.rs  main_complex.rs  services.rs
backend/services/clinical-data-hub-rust/src/api/: federation.rs  mod.rs
backend/services/clinical-data-hub-rust/src/cache/: l1_memory.rs  l2_redis.rs  l3_persistent.rs  manager.rs  mod.rs
backend/services/clinical-data-hub-rust/src/models/: cache.rs  data_source.rs  mod.rs  performance.rs  quality.rs
backend/services/clinical-data-hub-rust/src/services/: grpc.rs  http.rs
backend/services/global-outbox-service-rust/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
backend/services/global-outbox-service-rust/proto/: outbox.proto
backend/services/global-outbox-service-rust/src/: config.rs  main.rs
backend/services/global-outbox-service-rust/src/database/: models.rs  repository.rs
backend/services/kb-drug-rules/: Cargo.toml
backend/services/medication-service/flow2-rust-engine/: BUILD_ERRORS_ANALYSIS.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  Cargo.toml  PHASE3_CLINICAL_INTELLIGENCE_ENGINE.md  PHASE3_IMPLEMENTATION_GUIDE.md  PRODUCTION_API_TEST_REPORT.md  SNAPSHOT_PROCESSING_ENHANCEMENT.md  build_with_msvc.bat  config.toml  test_api_design.py  test_build.bat  test_real_unified_engine.py  test_recipe_engine.py  test_warfarin_only.rs
backend/services/medication-service/flow2-rust-engine/benches/: rule_evaluation.rs
backend/services/medication-service/flow2-rust-engine/kb_ddi_rules_dummy/: ace_inhibitor_interactions.toml  raas_interactions.toml
backend/services/medication-service/flow2-rust-engine/kb_drug_rules_dummy/: empagliflozin.toml  warfarin.toml
backend/services/medication-service/flow2-rust-engine/knowledge/kb_ddi_rules/: ace_inhibitor_interactions.toml
backend/services/medication-service/flow2-rust-engine/knowledge/kb_drug_rules/: lisinopril.toml  metformin.toml  vancomycin.toml
backend/services/medication-service/flow2-rust-engine/src/: lib.rs  main.rs  simple_test_harness.rs
backend/services/medication-service/flow2-rust-engine/src/api/: handlers.rs  middleware.rs  responses.rs  server.rs
backend/services/medication-service/flow2-rust-engine/src/clients/: snapshot_client.rs
backend/services/medication-service/flow2-rust-engine/src/engine/: mod.rs  orchestrator.rs
backend/services/medication-service/flow2-rust-engine/src/jit_safety/: ddi_adapter.rs  engine.rs  enhanced_engine.rs  mod.rs  normalization.rs  rules.rs
backend/services/medication-service/flow2-rust-engine/src/models/: knowledge_base.rs  medication.rs  mod.rs  rules.rs
backend/services/medication-service/flow2-rust-engine/src/phase3/: apollo_client.rs  evidence.rs  ffi_bridge.rs  mod.rs
backend/services/medication-service/flow2-rust-engine/src/unified_clinical_engine/: expression_parser.rs  expression_validator.rs  mod.rs  parallel_rule_engine.rs  risk_aware_titration.rs
backend/services/medication-service/flow2-rust-engine/src/utils/: mod.rs
backend/services/medication-service/kb_loader_v2/: Cargo.toml
backend/services/medication-service/kb_loader_v2/src/: lib.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/: Cargo.toml  build.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/src/: ffi.rs  lib.rs  types.rs  utils.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/src/cae/: config.rs  database.rs  engine.rs  mod.rs  rules.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/src/observability/: alerting.rs  logging.rs  metrics.rs  mod.rs  tracing.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/src/operations/: admin_api.rs  deployment.rs  health_checks.rs  mod.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/src/protocol/: approval_workflow.rs  cae_integration.rs  engine.rs  error.rs  evaluation.rs  event_publisher.rs  ffi_protocol.rs  integration_tests.rs  message_router.rs  mod.rs  rules.rs  schema_validation.rs  snapshot.rs  state_machine.rs  temporal.rs  types.rs
backend/services/safety-gateway-platform/internal/engines/rust_engines/src/testing/: README.md  chaos.rs  clinical.rs  compliance.rs  integration.rs  load.rs  mod.rs  performance.rs  reporting.rs  security.rs  (+1 more)
(+10612 files in other folders)
