[package]
name = "clinical-data-hub-rust"
version = "1.0.0"
edition = "2021"
description = "Clinical Data Intelligence Hub - Ultra-high performance clinical data aggregation and caching"
authors = ["Clinical Synthesis Hub Team"]

[dependencies]
# Web framework and async runtime
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC and protocol buffers
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# Database and caching
redis = { version = "0.24", features = ["tokio-comp", "cluster-async"] }
tokio-postgres = "0.7"
bb8 = "0.8"
bb8-redis = "0.13"
bb8-postgres = "0.8"

# HTTP client for external services
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }

# Serialization and data formats
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack serialization for efficient storage

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration and environment
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }

# Cryptography and security
sha2 = "0.10"
ring = "0.17"
base64 = "0.21"

# Concurrency and data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"  # Data parallelism

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Memory management and optimization
mimalloc = { version = "0.1", default-features = false }

# Compression
lz4 = "1.24"
zstd = "0.12"

# Kafka client for event streaming
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

# Health checks and service discovery
consul = "0.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

# Benchmarks removed until implemented
# [[bench]]
# name = "cache_performance"
# harness = false
#
# [[bench]]
# name = "data_aggregation"
# harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true