[package]
name = "global-outbox-service-rust"
version = "1.0.0"
edition = "2021"
authors = ["Clinical Synthesis Hub Team"]
description = "High-performance Rust implementation of the Global Outbox Service"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework and HTTP
axum = { version = "0.7", features = ["json", "query", "tokio", "tracing"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# gRPC and protobuf
tonic = { version = "0.10", features = ["tls"] }
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
envy = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.6"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Circuit breaker
circuit-breaker = "0.5"

# Retry logic
retry = "2.0"

# Environment
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "server"
path = "src/main.rs"