[package]
name = "flow2-rust-engine"
version = "0.1.0"
edition = "2021"
authors = ["Clinical Synthesis Hub Team"]
description = "Unified Dose Safety Engine - Production-ready clinical decision support with sub-100ms performance"
license = "MIT"
repository = "https://github.com/Cardiofit/clinical-synthesis-hub-full"
keywords = ["healthcare", "clinical", "dose-calculation", "safety", "rust"]
categories = ["science", "web-programming::http-server"]

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[dependencies]
# Core async runtime and web framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # Used for configuration files
toml = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }  # Used for request IDs

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Performance and utilities for unified engine
rayon = "1.8"  # Parallel rule processing
dashmap = "5.5"  # Concurrent knowledge base access
once_cell = "1.19"  # Lazy static initialization

# HTTP client for external clinical services
reqwest = { version = "0.11", features = ["json"] }

# Cryptographic functions for snapshot integrity verification
sha2 = "0.10"

# System utilities
num_cpus = "1.16"  # Dynamic thread pool sizing

# File system monitoring for hot knowledge base updates
notify = "6.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "unified_engine_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Remove debug symbols for smaller binary

[profile.dev]
opt-level = 1  # Faster compilation in development

[[bin]]
name = "flow2-rust-engine"
path = "src/main.rs"

[features]
default = ["production"]
production = []  # Production optimizations
development = []  # Development features
phase3 = []  # Phase 3 Clinical Intelligence Engine features

[lib]
name = "flow2_rust_engine"
crate-type = ["cdylib", "rlib"]  # Enable both dynamic library and Rust library


