[package]
name = "kb_loader_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
regex = "1.10"
time = { version = "0.3", features = ["parsing"] }
serde_json = "1.0"
once_cell = "1.19"

[dev-dependencies]
rand = "0.8"
