[package]
name = "safety_engines"
version = "0.1.0"
edition = "2021"
authors = ["CardioFit Team"]
description = "Hybrid Protocol Engine and CAE implementation for Safety Gateway Platform"
license = "MIT"

[lib]
name = "safety_engines"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"

# Date/time handling for temporal constraints
chrono = { version = "0.4", features = ["serde", "clock"] }

# UUID generation for protocol tracking
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections and caching for rule evaluation
lru = "0.12"
dashmap = "5.5"
indexmap = { version = "2.1", features = ["serde"] }

# Async runtime for concurrent rule evaluation
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Logging (compatible with Go zap)
log = "0.4"
slog = { version = "2.7", features = ["max_level_trace"] }
slog-json = "2.6"

# Hash functions for snapshot tracking
sha2 = "0.10"
blake3 = "1.5"

# Clinical data validation and parsing
regex = "1.10"
pest = "2.7"
pest_derive = "2.7"

# Performance monitoring and metrics  
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"

# State machine implementation
state_machine_future = "0.2"

# FFI helpers for Go integration
libc = "0.2"
cstr = "0.2"

# CPU detection for parallel rule evaluation
num_cpus = "1.16"

# Configuration management
config = "0.14"
toml = "0.8"

# Clinical expression evaluation
evalexpr = "11.3"

# Testing framework dependencies
rand = "0.8"                    # Random number generation for testing
tempfile = "3.8"                # Temporary files for testing
mockall = "0.11"                # Mocking framework for testing
proptest = "1.3"                # Property-based testing
quickcheck = "1.0"              # QuickCheck-style testing
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }  # Fake data generation

# Network and HTTP testing
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
wiremock = { version = "0.5", optional = true }
tokio-test = "0.4"

# Statistics and metrics for testing
statrs = "0.16"                 # Statistical functions
hdrhistogram = "7.5"            # High dynamic range histograms

# Optional: Metrics and tracing
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
pretty_assertions = "1.4"       # Better assertion output
test-log = "0.2"                # Better test logging

[features]
default = ["protocol_engine"]
protocol_engine = []
cae_engine = []
testing = ["reqwest", "wiremock"]
metrics = ["prometheus"]
tracing = ["dep:tracing", "opentelemetry", "tracing-opentelemetry"]
full = ["protocol_engine", "cae_engine", "metrics", "tracing", "testing"]